Switch to gradlex for modularity (#13112)
* Switch to gradlex

* Move javafx plugion to common-conventions

* Fix JavaFX patching

* Fix controlsfx

* Remove version number at Juptier dependency

* Switch to jvm-test-suite

* Try to fix ControlfsFX

* First draft for module test

* Remove jvm-test-suite

* Try to fix module declarations

* WIP: replace org.openjfx.javafxplugin by work of gradlex

* Try to fix compilation

* jabgui: Compiler error: error: cannot access EventTarget

* Add debug output

* Remove unused plugin

* WIP

* Disable graphics "rewrite"

* Streamline JavaFX variant handling

* Fix exports for jabgui

* More dependencies

* Add one more dependency

* OpenRewrite...

* Exclude all kotlin from openrewrite

* Remove some "--add-opens"

* Fix requirements

* Try to remove "module-info.test"

* Remove two non-(yet-)needed gradlex plugins

* Add missing gradlex module

* Add missing requirement

---------

Co-authored-by: Jendrik Johannes <jendrik.johannes@gmail.com>